crates/sid-widgets/src/snapshots/sid_widgets__database__tests__connection_list_add_new_selected.snap
---
source: crates/sid-widgets/src/database.rs
expression: s
---
┌ Connections ─────────┐┌ SQL ─────────────────────────────────────────────────┐
│+ add new             ││                                                      │
│  o pg (postgres)     ││                                                      │
│  o staging (postgres)││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      │└──────────────────────────────────────────────────────┘
│                      │┌ Results · no results yet ────────────────────────────┐
│                      ││(no query has run yet — Ctrl+R to execute)            │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      │└──────────────────────────────────────────────────────┘
└──────────────────────┘Tab cycles right pane · Ctrl+R run query · Ctrl+E export
