crates/sid-widgets/src/snapshots/sid_widgets__database__tests__connection_list_empty_add_new.snap
---
source: crates/sid-widgets/src/database.rs
expression: s
---
┌ Connections ─────────┐┌ SQL ─────────────────────────────────────────────────┐
│+ add new             ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      │└──────────────────────────────────────────────────────┘
│                      │┌ Results · no results yet ────────────────────────────┐
│                      ││(no query has run yet — Ctrl+R to execute)            │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      │└──────────────────────────────────────────────────────┘
└──────────────────────┘Tab cycles right pane · Ctrl+R run query · Ctrl+E export
